# envoy-acme-xds

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Containerfile.systemd  README.md  compose.systemd.yaml  compose.yaml  example-config.yaml
.github/workflows/: ci.yml  release.yml
src/: error.rs  main.rs  systemd.rs
src/acme/: account.rs  challenge.rs  mod.rs  order.rs  renewal.rs  storage.rs
src/config/: deserialize.rs  loader.rs  mod.rs  types.rs
src/envoy/: cluster.rs  listener.rs  mod.rs  route.rs  secret.rs
src/xds/: cds.rs  lds.rs  merge.rs  mod.rs  sds.rs  server.rs  state.rs
test/: README.md  cleanup.sh  generate-certs.sh  run-test.sh  verify-validation.sh  xds-config-systemd.yaml  xds-config.yaml
test/envoy/: envoy.yaml
test/pebble/: pebble-config.json
test/systemd/: envoy-acme-xds.service  envoy-acme-xds.socket
